_static/style.css
@font-face {
  font-family: 'JuliaMono'; /* Define your font family name */
  src: url('_static/fonts/JuliaMono-Medium.woff2') format('woff2'); /* Specify WOFF2 as the first source */
  font-weight: normal; /* Define the font weight */
  font-style: normal;  /* Define the font style */
}

@font-face {
  font-family: 'JuliaMono'; /* Define your font family name */
  src: url('_static/fonts/JuliaMono-Bold.woff2') format('woff2'); /* Specify WOFF2 as the first source */
  font-weight: bold; /* Define the font weight */
  font-style: normal;  /* Define the font style */
}

@font-face {
  font-family: 'JuliaMono-MediumItalic'; /* Define your font family name */
  src: url('_static/fonts/JuliaMono-MediumItalic.woff2') format('woff2'); /* Specify WOFF2 as the first source */
  font-weight: normal; /* Define the font weight */
  font-style: italic;  /* Define the font style */
}

@font-face {
  font-family: 'JuliaMono-BoldItalic'; /* Define your font family name */
  src: url('_static/fonts/JuliaMono-BoldItalic.woff2') format('woff2'); /* Specify WOFF2 as the first source */
  font-weight: bold; /* Define the font weight */
  font-style: italic;  /* Define the font style */
}

@font-face {
  font-family: 'MonaspaceArgon'; /* Define your font family name */
  src: url('_static/fonts/MonaspaceArgon-Medium.woff2') format('woff2'); /* Specify WOFF2 as the first source */
  font-weight: normal; /* Define the font weight */
  font-style: normal;  /* Define the font style */
}

@font-face {
  font-family: 'MonaspaceArgon'; /* Define your font family name */
  src: url('_static/fonts/MonaspaceArgon-Bold.woff2') format('woff2'); /* Specify WOFF2 as the first source */
  font-weight: bold; /* Define the font weight */
  font-style: normal;  /* Define the font style */
}

@font-face {
  font-family: 'MonaspaceArgon-MediumItalic'; /* Define your font family name */
  src: url('_static/fonts/MonaspaceArgon-MediumItalic.woff2') format('woff2'); /* Specify WOFF2 as the first source */
  font-weight: normal; /* Define the font weight */
  font-style: italic;  /* Define the font style */
}

@font-face {
  font-family: 'MonaspaceArgon-BoldItalic'; /* Define your font family name */
  src: url('_static/fonts/MonaspaceArgon-BoldItalic.woff2') format('woff2'); /* Specify WOFF2 as the first source */
  font-weight: bold; /* Define the font weight */
  font-style: italic;  /* Define the font style */
}

code {
    font-family: 'MonaspaceArgon', menlo, consolas, 'DejaVu Sans Mono', monospace; /* Use the custom font for code */
}

.language-julia {
    font-family: 'JuliaMono', menlo, consolas, 'DejaUv Sans Mono', monospace; /* Use the custom font for Julia code */
}

.katex {
    font-size: 108%;
}

